# data401-nlp

./: .gitignore  .jupyter_ystore.db  .pre-commit-config.yaml  00_core.html  00_core.md  01-intro.html  01-intro.html.md  04-sentiment_analysis.html  1-intro.html  1-intro.html.md  99_helpers_test.html  99_helpers_test.md  CHANGELOG.md  CLAUDE.md  COLAB_COMPATIBILITY.md  LICENSE  NBDEV-AGENT-SUMMARY.md  README.md  colab-requirements.txt  core.html  core.html.md  custom_article.tpl  deepnote-requirements.txt  eda_spacy.html  eda_spacy.html.md  eda_spacy_part2.html  index.html  index.html.md  intro.html  intro.html.md  nb2pdf.sh  nbdev.yml  platform_test.html  platform_test.html.md  pyproject.toml  regex.html  requirements.txt  robots.txt  search.json  settings.ini  (+3 more)
.github/: dependabot.yml
.github/scripts/: README.md  validate-build.sh
.github/workflows/: deploy.yaml  release.yaml  test.yaml
1-intro_files/figure-commonmark/: 00274a56-1-b62affb2-2519-4fe4-82cf-f40dcffa03e3
1-intro_files/figure-html/: 0a8c6575-1-7d560d89-c8fe-4a24-b742-16a8368e7184  db3cea6c-1-acf6b95c-51de-43b2-bdee-7a74d9bdd17a
data/: covidhoax_OR_notomasks_hashtag.csv  covidisreal_OR_wearamask_hashtag.csv
data401_nlp/: _modidx.py  core.py
data401_nlp/helpers/: env.py  llm.py  spacy.py  submit.py
data401_nlp/tests/: platform.py
helpers/: env.html  env.html.md  llm.html  llm.html.md  spacy.html  spacy.html.md  submit.html  submit.html.md
nbs/: 00_core.ipynb  01-intro.ipynb  01_intro.ipynb  02-eda-spacy.ipynb  02_eda_spacy.ipynb  03_eda_spacy.ipynb  03_eda_spacy_part2.ipynb  03_regex.ipynb  03_zero_frequency_compression_unigrams_bigrams.ipynb  04_sparse_vectors.ipynb  1-intro.ipynb  99_helpers_test.ipynb  99_platform_test.ipynb  EDA_Assignment_Template.ipynb  Streaming-example.ipynb  _02_lab2_withCollocations.qmd  _1-intro.qmd  _quarto.yml  index.ipynb  nbdev.yml  sidebar.yml  streamlit_app.py
nbs/data/: train-sentiment.csv  tweets_with_tokens.csv
nbs/helpers/: 00_env.ipynb  01_llm.ipynb  02_submit.ipynb  03_spacy.ipynb
notebooks/: 01-intro.launch.ipynb
site_libs/bootstrap/: bootstrap.min.css
