[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name="data401-nlp"
version = "0.0.1"
requires-python=">=3.9"
dependencies = [
    "spacy>=3.8.11",
    "lisette>=0.0.15",
    "fastcore>=1.8.16",
    "pandas>=2.3.3",
    "nltk>=3.9.2",
    "orjson>=3.11.5",
    "python-dotenv>=1.2.1",
    "IPython>=9.7.0"
]
