[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="data401-nlp"
dynamic = ["version", "dependencies"]
readme = "README.md"
requires-python=">=3.11"
description = "Interactive NLP course labs for Jupyter, Colab, and Deepnote"
authors = [
    {name = "Lisa D Harper", email = "lisa.harper@su.edu"}
]
license = {text = "Apache-2.0"}
keywords = ["nbdev", "jupyter", "nlp", "education", "spacy", "transformers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education",
]

[project.urls]
Homepage = "https://github.com/su-dataAI/data401-nlp"
Documentation = "https://su-dataAI.github.io/data401-nlp"
Repository = "https://github.com/su-dataAI/data401-nlp"
"Bug Tracker" = "https://github.com/su-dataAI/data401-nlp/issues"
"Course Website" = "https://www.notion.so/Intro-to-Natural-Language-Processing-28b213a83886806982a5c03b425595c4"

[project.optional-dependencies]
dev = ["pytest>=7.0", "nbdev>=2.3.0"]
nlp = ["spacy>=3.7,<3.9", "nltk>=3.9,<3.10"]
transformers = ["transformers>=4.45,<4.50", "torch>=2.1,<2.5"]
api = ["fastapi>=0.100,<0.128", "pydantic>=2.0,<3"]
all = [
    "spacy>=3.7,<3.9",
    "nltk>=3.9,<3.10",
    "transformers>=4.45,<4.50",
    "torch>=2.1,<2.5",
    "fastapi>=0.100,<0.128",
    "pydantic>=2.0,<3"
]

[tool.pytest.ini_options]
testpaths = ["nbs"]
python_files = "*test*.ipynb"
addopts = "-v"

[tool.coverage.run]
omit = ["*/test*", "*/__init__.py", "setup.py"]

[tool.nbdev]
# Additional nbdev configuration
lib_path = "data401_nlp"
nbs_path = "nbs"
